+file transfer service, +receive files

--- a/ProtoLibrary/ProtoLibrary.csproj
+++ b/ProtoLibrary/ProtoLibrary.csproj
@@ -7,8 +7,9 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <Protobuf Include="Protos\auth.proto" GrpcServices="Server"/>
-      <Protobuf Include="Protos\users.proto" GrpcServices="Server"/>
+      <Protobuf Include="Protos\auth.proto" GrpcServices="Server" />
+      <Protobuf Include="Protos\users.proto" GrpcServices="Server" />
+      <Protobuf Include="Protos\filetransfer.proto" GrpcServices="Server" />
     </ItemGroup>
 
     <ItemGroup>
