+ activation secret codes

--- a/ProtoLibrary/ProtoLibrary.csproj
+++ b/ProtoLibrary/ProtoLibrary.csproj
@@ -11,6 +11,7 @@
       <Protobuf Include="Protos\users.proto" GrpcServices="Server" />
       <Protobuf Include="Protos\filetransfer.proto" GrpcServices="Server" />
       <Protobuf Include="Protos\contents.proto" GrpcServices="Server" />
+      <Protobuf Include="Protos\codes.proto" GrpcServices="Server" />
     </ItemGroup>
 
     <ItemGroup>
