+ get all plans

--- a/ProtoLibrary/ProtoLibrary.csproj
+++ b/ProtoLibrary/ProtoLibrary.csproj
@@ -12,6 +12,7 @@
       <Protobuf Include="Protos\filetransfer.proto" GrpcServices="Server" />
       <Protobuf Include="Protos\contents.proto" GrpcServices="Server" />
       <Protobuf Include="Protos\codes.proto" GrpcServices="Server" />
+      <Protobuf Include="Protos\plans.proto" GrpcServices="Server" />
     </ItemGroup>
 
     <ItemGroup>
