+ tests:  - validation email unit test
ValidationService:
 - new method email verify

+ moved proto-files

--- a/clouddrop/clouddrop.csproj
+++ b/clouddrop/clouddrop.csproj
@@ -25,7 +25,7 @@
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\ProtoLibrary\ProtoLibrary.csproj" />
+      <ProjectReference Include="..\clouddrop.Protos\clouddrop.Protos.csproj" />
     </ItemGroup>
 
 </Project>
